--- a/.github/workflows/author.yml
+++ b/.github/workflows/author.yml
@@ -1,4 +1,4 @@
-name: Check author
+name: Maintainer
 # Check author of changes is in maintainers
 
 on:
@@ -9,9 +9,7 @@ env:
 
 jobs:
 
-  author:
-    name: Check author
-
+  check:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,7 +24,7 @@ jobs:
         version: nightly
         toolchain: --disable-assistant # no need for it
 
-    - name: Test crate
+    - name: Test crates
       run: ${{env.CHECKS_REPO}}/scripts/check-author.sh ${{ github.event.pull_request.user.login }}
       shell: bash
       env:
