--- a/index/li/libhello/libhello-1.0.0.toml
+++ b/index/li/libhello/libhello-1.0.0.toml
@@ -3,7 +3,7 @@ name = "libhello"
 version = "1.0.0"
 
 maintainers = ["alejandro@mosteo.com"]
-maintainers-logins = ["mosteo"]
+maintainers-logins = ["fakemosteo"] # Will cause authorship failure
 
 [origin]
 url = "https://github.com/alire-project/libhello/archive/v1.0.tar.gz"
