--- a/index/li/libhello/libhello-1.0.1.toml
+++ b/index/li/libhello/libhello-1.0.1.toml
@@ -1,9 +1,9 @@
 description = "\"Hello, world!\" demonstration project support library"
 name = "libhello"
-version = "1.0.0"
+version = "1.0.1"
 
 maintainers = ["alejandro@mosteo.com"]
-maintainers-logins = ["fakemosteo"] # Will cause authorship failure
+maintainers-logins = ["mosteo"]
 
 [origin]
 url = "https://github.com/alire-project/libhello/archive/v1.0.tar.gz"
